# P4_web_wrap

./: .gitignore  README.en.md  README.md  prepare_p4_stack.sh  requirements.txt  run_p4_stack.sh
P4_web/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
P4_web/docs/: API_DRAFT.md  ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  LOCAL_SYNC.md
P4_web/scripts/: dev.sh
P4_web/src/p4_web/: __init__.py  cli.py  main.py
P4_web/src/p4_web/api/: dependencies.py  file_responses.py  schemas.py
P4_web/src/p4_web/api/routers/: approvals.py  artifacts.py  files.py  health.py  jobs.py  projects.py  (+2 more)
P4_web/src/p4_web/core/: config.py  slug.py
P4_web/src/p4_web/domain/: __init__.py  enums.py
P4_web/src/p4_web/persistence/: database.py  models.py
P4_web/src/p4_web/runners/: __init__.py  dry_run.py  legacy.py  ports.py
P4_web/src/p4_web/services/: approvals.py  artifacts.py  delivery_folders.py  delivery_state.py  delivery_status.py  files.py  jobs.py  projects.py  storage_factory.py  sync_import.py  workspaces.py
P4_web/src/p4_web/storage/: __init__.py  local.py  ports.py
P4_web/src/p4_web/sync/: __init__.py  local_manifest.py
P4_web/src/p4_web/workers/: __init__.py  local_worker.py
P4_web/tests/: conftest.py  test_delivery_folders.py  test_delivery_status.py  test_file_content_routes.py  test_generate_lists_job.py  test_generate_pdf_job.py  test_legacy_runner.py  test_local_manifest.py  test_pack_unpack_jobs.py  test_project_copy_delete.py  test_settings_legacy_runner.py  test_slug.py  test_sync_upload_import.py  test_xsl_fo_job.py
(+32 files in other folders)
