[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "p4-web"
version = "0.1.0"
description = "Cloud-ready web platform for P4 publishing workflows."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
  { name = "P4 Team" }
]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "SQLAlchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "aiosqlite>=0.20",
  "greenlet>=3.0",
  "python-multipart>=0.0.9",
  "typer>=0.12",
  "rich>=13.7",
  "xlrd>=1.2.0,<2",
]

[project.optional-dependencies]
aws = [
  "boto3>=1.34",
]
dev = [
  "httpx>=0.27",
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
]

[project.scripts]
p4web = "p4_web.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/p4_web"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

